# app/Http/Resources/UserResource.php
@@ -15,7 +15,10 @@ class UserResource extends JsonResource
         return [
             'id' => $this->id,
             'name' => $this->name,
+            'first_name' => $this->first_name,
+            'last_name' => $this->last_name,
             'email' => $this->email,
+            'phone' => $this->phone,
             'status' => $this->status,
             'is_superadmin' => (bool) $this->is_superadmin,
             'email_verified_at' => $this->email_verified_at,
