# app/Models/User.php
@@ -26,7 +26,10 @@ class User extends Authenticatable implements MustVerifyEmailContract
      */
     protected $fillable = [
         'name',
+        'first_name',
+        'last_name',
         'email',
+        'phone',
         'password',
         'status',
         'is_superadmin',
